--- a/index.html
+++ b/index.html
@@ -10,47 +10,47 @@
     <div class="social_window">
         <div class="social_window_header">
             <h1>My Website!!</h1>
-            <img src="/Graphics/XfQC.gif" alt="" class="gif_1">
+            <img src="./Graphics/XfQC.gif" alt="" class="gif_1">
             <button class="close_button">X</button>
         </div>
         <div class="social_window_content">
             <div class="profile">
                 <div class="profile_left">
-                    <img src="/Graphics/dli60y1gdn3b1.png" alt="profile_pic" class="profile_pic">
+                    <img src="./Graphics/dli60y1gdn3b1.png" alt="profile_pic" class="profile_pic">
                     <p class="name">Angel</p>
                 </div>
                 <div class="profile_right">
                     <p>Decided to code this sh*t for fun.
                     <br>
                     <br> Professional Music listener 
-                    <img src="/Graphics/blinkiesCafe-1b.gif" alt="">
+                    <img src="./Graphics/blinkiesCafe-1b.gif" alt="">
                     </p>
                 </div>
             </div>
             <hr>
             <div class="links"></div>
                 <div class="link_title">
-                    <h1>my interests</h1> <img src="/Graphics/download.gif" alt="" class="gif_2">
+                    <h1>my interests</h1> <img src="./Graphics/download.gif" alt="" class="gif_2">
                 </div>
                 <div class="link_grid">
                     <div class="interest_1">
-                        <img src="/Graphics/UI/Minecraft sword.gif" alt="" class="interest_img">
+                        <img src="./Graphics/UI/Minecraft sword.gif" alt="" class="interest_img">
                         <p>games</p>
                     </div>
                     <div class="interest_2">
-                        <img src="/Graphics/UI/Booknerd.jpeg" alt="" class="interest_img">
+                        <img src="./Graphics/UI/Booknerd.jpeg" alt="" class="interest_img">
                         <p>books</p>
                     </div>
                     <div class="interest_3">
-                        <img src="/Graphics/UI/Globe.gif" alt="" class="interest_img">
+                        <img src="./Graphics/UI/Globe.gif" alt="" class="interest_img">
                         <p>movies</p>
                     </div>
                     <div class="interest_4">
-                        <img src="/Graphics/UI/Dancing skelly.gif" alt="" class="interest_img">
+                        <img src="./Graphics/UI/Dancing skelly.gif" alt="" class="interest_img">
                         <p>music</p>
                     </div>
                     <div class="interest_5">
-                        <img src="/Graphics/UI/Cat.gif" alt="" class="interest_img">
+                        <img src="./Graphics/UI/Cat.gif" alt="" class="interest_img">
                         <p>My CATT</p>
                     </div>
                     
