games tab, 404, working links

--- a/index.html
+++ b/index.html
@@ -36,26 +36,40 @@
                     <h1>my interests</h1> <img src="./Graphics/download.gif" alt="" class="gif_2">
                 </div>
                 <div class="link_grid">
-                    <div class="interest_1">
-                        <img src="./Graphics/UI/Minecraft sword.gif" alt="" class="interest_img">
-                        <p>games</p>
-                    </div>
-                    <div class="interest_2">
-                        <img src="./Graphics/UI/Booknerd.jpeg" alt="" class="interest_img">
-                        <p>books</p>
-                    </div>
-                    <div class="interest_3">
-                        <img src="./Graphics/UI/Globe.gif" alt="" class="interest_img">
-                        <p>movies</p>
-                    </div>
-                    <div class="interest_4">
-                        <img src="./Graphics/UI/Dancing skelly.gif" alt="" class="interest_img">
-                        <p>music</p>
-                    </div>
-                    <div class="interest_5">
-                        <img src="./Graphics/UI/Cat.gif" alt="" class="interest_img">
-                        <p>My CATT</p>
-                    </div>
+                    <a href="./games.html">
+                        <div class="interest_1" >
+                            <img src="./Graphics/UI/Minecraft sword.gif" alt="" class="interest_img" href="./games.html">
+                            <p>games</p>
+                        </div>
+                    </a>
+                    <a href="./404.html">
+
+                        <div class="interest_2">
+                            <img src="./Graphics/UI/Booknerd.jpeg" alt="" class="interest_img" >
+                            <p>books</p>
+                        </div>
+                    </a>
+                    <a href="./404.html">
+
+                        <div class="interest_3">
+                            <img src="./Graphics/UI/Globe.gif" alt="" class="interest_img" >
+                            <p>movies</p>
+                        </div>
+                    </a>
+                    <a href="./404.html">
+
+                        <div class="interest_4" >
+                        <img src="./Graphics/UI/Dancing skelly.gif" alt="" class="interest_img" >
+                            <p>music</p >
+                        </div>
+                    </a>
+                    <a href="./404.html">
+
+                        <div class="interest_5">
+                            <img src="./Graphics/UI/Cat.gif" alt="" class="interest_img" >
+                            <p>My CATT</p>
+                        </div>
+                    </a>
                     
                     
                 </div>
