--- a/games.html
+++ b/games.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="gamesstyles.css">
 </head>
 <body>
+    <img src="./Graphics/games/download (1).gif" alt="" class="main_gif">
     <!-- Social Window 1 -->
     <div class="social_window">
         <input type="checkbox" id="checkbox" class="checkbox">
