book page and finished up games page

--- a/games.html
+++ b/games.html
@@ -60,8 +60,9 @@
         </div>
         
         <div class="social_window_content_2">
-            <img src="./Graphics/404/aguibihen-sigma-wolf.gif" alt="">
-            <p>hola</p>
+            
+            <p>What can I say, Zelda lore just hits man. might need a whole website to explain it.</p>
+            <img src="./Graphics/games/image.png" alt="">
         </div>
     </div>
 
