--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                             <p>games</p>
                         </div>
                     </a>
-                    <a href="./404.html">
+                    <a href="./books.html">
 
                         <div class="interest_2">
                             <img src="./Graphics/UI/Booknerd.jpeg" alt="" class="interest_img" >
