--- a/dune.html
+++ b/dune.html
@@ -45,7 +45,8 @@
     <div class="book3">
         
         <h1>CHILDREN OF DUNE</h1>
-        <div class="image_wrapper_black">
-            <img class="dune1" src >
+        <div class="image_wrapper">
+            <img class="dune1" src="./Booksite/ChildrenOfDune.png" alt="">
+            <p>text text text</p>
 </body>
 </html>
