tetris from my repo

--- a/404.html
+++ b/404.html
@@ -7,9 +7,14 @@
     <link rel="stylesheet" href="404.css">
 </head>
 <body>
+    <div class="contrastadjust" bis_skin_check="1"></div>
+    <div class="matrix">
+        
+    </div>
     <img src="./Graphics/404/aguibihen-sigma-wolf.gif" alt="">
     <h1>Still working my G</h1>
     <img src="./Graphics/404/¿Qué o quién es_ ¿Qué hace_.gif" alt="">
     <img src="./Graphics/404/PRAY.gif" alt="">
+    <img src="./Graphics/404/smiley.gif" alt="">
 </body>
 </html>
