--- a/books.html
+++ b/books.html
@@ -27,13 +27,14 @@
                 <img class="grid_img fast" src="./Booksite/planets.png" alt="">
         </div>
     </div>
-
+    <div class="matrix"></div>
+    
     <div class="bookshelve">
         <a class="link1" href="./dune.html">
             <div class="link_container">
                 <div class="book_link">
-                       <img class="link_img"src="./Booksite/book.png" alt="">
-                       <p class="link_text">DUNE TRILOGY</p>
+                    <img class="link_img"src="./Booksite/book.png" alt="">
+                    <p class="link_text">DUNE TRILOGY</p>
                     </div>
                 </div>            
         </a>
@@ -51,7 +52,7 @@
                     <img class="link_img" src="./Booksite/book.png" alt="">
                     <p class="link_text">1984</p>
                 </div>
-           </div>
+        </div>
         </a>
         
     </div>    
