--- a/games.html
+++ b/games.html
@@ -97,6 +97,12 @@
             </div>
         </div>
     </div>
-    <img class="weirdass" src="./Graphics/games/picmix.com_2507784.gif" alt="">
+    <div class="W95gamesLink" >
+        <a href="./W95Games/95gamesIndex.html">
+
+            <img class="weirdass"  src="./Graphics/PeguinComputerGif.gif" alt="">
+            <p>My Games Library</p>
+        </a>
+    </div>
 </body>
 </html>
