--- a/index.html
+++ b/index.html
@@ -32,8 +32,13 @@
             </div>
             <hr>
             <div class="links"></div>
-                <div class="link_title">
-                    <h1>my interests</h1> <img src="./Graphics/download.gif" alt="" class="gif_2">
+            <div class="link_title">
+                <h1>my interests</h1> 
+                
+                    <div class="matrix">
+                        <img src="./Graphics/download.gif" alt="" class="gif_2">
+
+                    </div>
                 </div>
                 <div class="link_grid">
                     <a href="./games.html">
