--- a/dune.html
+++ b/dune.html
@@ -24,7 +24,7 @@
             <img class="dune1" src="./Booksite/dithered-image (1).png" alt="">
             <img class="dune2" src="./Booksite/dithered-image (2).png" alt="">
             <p>10/10</p>
-            <p>FRANK HERBERT'S MASTERPIECE SCIENCE FICTION NOVEL THAT EXPLORES PERFECTLY THEMES OF POLITICS AND RELIGION.</p>
+            <p>FRANK HERBERT'S MASTERPIECE SCIENCE FICTION NOVEL THAT EXPLORES PERFECTLY THEMES OF POLITICS AND RELIGION</p>
         </div>
 
     
@@ -35,7 +35,8 @@
         <h1 class="h1_black">DUNE MESSIAH</h1>
         <div class="image_wrapper_black">
             <img class="dune1" src="./Booksite/DuneMessiah.png" alt="">
-            <p class="black_text">text text text</p>
+            <p class="black_text">9/10</p>
+            <p class="black_text">THIS BOOK SUBVERTS THE EXPECTATIONS LEFT BY THE FIRST ONE, THE BOOK OPENING WITH AN INTERVIEW MADE BY FRANK HERBERT ON CREATING A CAUTIONARY TALE ON CHARISMATIC LEADERS IS A FANTASTIC IDEA. 12 YEARS AFTER THE FIRST BOOK, PAUL ATREIDES IS FAR FROM THE HERO THAT HE WAS SET OUT TO BE, COMPLETELY GIVEN HIMSELF INTO THE FALSE PROPHECY TO CONTROL THE RELIGIOUS MASSES. THIS BOOK STILL CONTAINS THE THEMES THAT I PERSONALLY LOVE ABOUT DUNE, THE HIDDEN POLITICS, THE PLANS WITHIN PLANS, THE RELIGIOUS CRITIQUE ALONGSIDE THE FANTASTIC WORLDBUILDING. NONETHELESS, THE BOOKS PACING IS SLOWER THAN THE FIRST ONE EVEN THOUGH IT IS ONLY A THIRD OF THE SIZE.</p>
         </div>
 
     </div>
@@ -47,6 +48,7 @@
         <h1>CHILDREN OF DUNE</h1>
         <div class="image_wrapper">
             <img class="dune1" src="./Booksite/ChildrenOfDune.png" alt="">
-            <p>text text text</p>
+            <p>7/10</p>
+            <p>THIS BOOK IS A CONTINUATION OF THE STORY OF PAUL'S CHILDREN. THE BOOK IS A BIT SLOWER THAN THE FIRST TWO, BUT IT STILL HAS SOME GREAT MOMENTS. THE WORLD-BUILDING IS STILL AMAZING, BUT THE PLOT FEELS A BIT MEANDERING AT TIMES. OVERALL, IT'S A SOLID ADDITION TO THE SERIES, BUT NOT AS STRONG AS THE FIRST TWO BOOKS.</p>
 </body>
 </html>
